compiler467/y.output
Terminals unused in grammar

   WS
   ID


Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | %empty

    4 token: myToken1
    5      | myToken2
    6      | IF
    7      | ELSE
    8      | INT_C


Terminals, with rules where they appear

$end (0) 0
error (256)
myToken1 (258) 4
myToken2 (259) 5
WS (260)
IF (261) 6
ELSE (262) 7
ID (263)
INT_C (264) 8


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
program (11)
    on left: 1, on right: 0
tokens (12)
    on left: 2 3, on right: 1 2
token (13)
    on left: 4 5 6 7 8, on right: 2


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: tokens .
    2 tokens: tokens . token

    myToken1  shift, and go to state 4
    myToken2  shift, and go to state 5
    IF        shift, and go to state 6
    ELSE      shift, and go to state 7
    INT_C     shift, and go to state 8

    $default  reduce using rule 1 (program)

    token  go to state 9


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 token: myToken1 .

    $default  reduce using rule 4 (token)


State 5

    5 token: myToken2 .

    $default  reduce using rule 5 (token)


State 6

    6 token: IF .

    $default  reduce using rule 6 (token)


State 7

    7 token: ELSE .

    $default  reduce using rule 7 (token)


State 8

    8 token: INT_C .

    $default  reduce using rule 8 (token)


State 9

    2 tokens: tokens token .

    $default  reduce using rule 2 (tokens)
